fix spacing

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1395,7 +1395,6 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 60px;
 }
 @media (min-width: 768px) {
   .container {
@@ -6209,5 +6208,9 @@ button.close {
   text-align: center;
   color: #b7293a;
   text-shadow: 2px 2px 0 #513a33;
+}
+
+.container-wrapper{
+  margin-bottom: 60px;
 }
 
